fix: visibility phone

--- a/style.css
+++ b/style.css
@@ -172,8 +172,4 @@ h5 {
         max-width: 100%;
         max-height: 90vh;
     }
-
-    .form-container {
-        display: none;
-    }
 }
